[gd_scene load_steps=16 format=3 uid="uid://dr4tm5uks77a5"]

[ext_resource type="Texture2D" uid="uid://caaemqq2ww1yi" path="res://art/32x32-cube.png" id="1_5647s"]
[ext_resource type="Script" path="res://scripts/espresso_mini_game.gd" id="1_pdyxi"]
[ext_resource type="Texture2D" uid="uid://bf2q4tmqrcgcx" path="res://art/success_indicator_full.png" id="2_k0v1a"]
[ext_resource type="Texture2D" uid="uid://c52xdkyugcme8" path="res://art/espresso-puck-half.png" id="3_1hmyn"]
[ext_resource type="Script" path="res://scripts/EspressoPuck.gd" id="3_ujar6"]
[ext_resource type="Script" path="res://scripts/EspressoPresser.gd" id="4_0dya8"]
[ext_resource type="Texture2D" uid="uid://q6g0oxfej0lk" path="res://art/espresso-puck-full.png" id="4_2m25h"]
[ext_resource type="Texture2D" uid="uid://ba2xun1c0f6x4" path="res://art/espresso-puck-done.png" id="4_rmd5q"]
[ext_resource type="Texture2D" uid="uid://df3uxqwbc6ncl" path="res://art/32x32-circle.png" id="6_3woro"]
[ext_resource type="Texture2D" uid="uid://cywl0jo8j6elu" path="res://art/Space_Key_Light.png" id="7_byje2"]
[ext_resource type="Texture2D" uid="uid://bse0syiko5u75" path="res://art/success_indicator_empty.png" id="8_cpfim"]
[ext_resource type="Texture2D" uid="uid://1jg1ulu5eeyp" path="res://art/espresso-presser.png" id="9_iljwa"]
[ext_resource type="Texture2D" uid="uid://ba1g0ttfuwek7" path="res://art/coffee-station-64x64.png" id="12_jpa7h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_24vq6"]
size = Vector2(88, 36)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jmomd"]
size = Vector2(8, 32)

[node name="EspressoMiniGame" type="Node2D"]
script = ExtResource("1_pdyxi")
successSprite = ExtResource("2_k0v1a")
espressoPuckHalfSprite = ExtResource("3_1hmyn")
espressoPuckDoneSprite = ExtResource("4_rmd5q")

[node name="Backdrop" type="Sprite2D" parent="."]
modulate = Color(0.296875, 0.171875, 0.128906, 1)
position = Vector2(318.5, 177.5)
scale = Vector2(18.9688, 10.2188)
texture = ExtResource("1_5647s")

[node name="Backdrop2" type="Sprite2D" parent="."]
modulate = Color(0.667969, 0.421875, 0.273438, 1)
position = Vector2(318.5, 261.5)
scale = Vector2(18.9688, 4.96877)
texture = ExtResource("1_5647s")

[node name="Backdrop3" type="Sprite2D" parent="."]
modulate = Color(0.125, 0.0742188, 0.0546875, 1)
position = Vector2(317.75, 180)
scale = Vector2(19.0469, 0.15625)
texture = ExtResource("1_5647s")

[node name="EspressoPuck" type="Node2D" parent="."]
position = Vector2(440, 220)
script = ExtResource("3_ujar6")
speed = 550.0
leftBound = 120
rightBound = 520

[node name="Sprite2D" type="Sprite2D" parent="EspressoPuck"]
texture = ExtResource("4_2m25h")

[node name="Area2D" type="Area2D" parent="EspressoPuck"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EspressoPuck/Area2D"]
position = Vector2(1, -8)
shape = SubResource("RectangleShape2D_24vq6")

[node name="Shadow" type="Sprite2D" parent="EspressoPuck"]
modulate = Color(0.125, 0.0742188, 0.0546875, 1)
position = Vector2(1, 60)
scale = Vector2(2.15625, 0.40625)
texture = ExtResource("6_3woro")

[node name="EspressoPresser" type="Node2D" parent="."]
position = Vector2(106, 95)
script = ExtResource("4_0dya8")
speed = 350.0
leftBound = 120
rightBound = 520

[node name="Sprite2D" type="Sprite2D" parent="EspressoPresser"]
position = Vector2(0, -15)
texture = ExtResource("9_iljwa")

[node name="EspressoPresserCollider" type="StaticBody2D" parent="EspressoPresser"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EspressoPresser/EspressoPresserCollider"]
shape = SubResource("RectangleShape2D_jmomd")

[node name="Shadow" type="Sprite2D" parent="EspressoPresser"]
modulate = Color(0.125, 0.0742188, 0.0546875, 1)
position = Vector2(-0.499994, 185)
scale = Vector2(0.96875, 0.40625)
texture = ExtResource("6_3woro")

[node name="SuccessIndicator_One" type="Sprite2D" parent="."]
position = Vector2(503, 35)
scale = Vector2(2, 2)
texture = ExtResource("8_cpfim")

[node name="SuccessIndicator_Two" type="Sprite2D" parent="."]
position = Vector2(547, 35)
scale = Vector2(2, 2)
texture = ExtResource("8_cpfim")

[node name="SuccessIndicator_Three" type="Sprite2D" parent="."]
position = Vector2(590, 35)
scale = Vector2(2, 2)
texture = ExtResource("8_cpfim")

[node name="SpaceKeyLight" type="Sprite2D" parent="."]
position = Vector2(322, 309)
texture = ExtResource("7_byje2")

[node name="Coffee-station-64x64" type="Sprite2D" parent="."]
position = Vector2(-102, 254)
texture = ExtResource("12_jpa7h")

[connection signal="body_entered" from="EspressoPuck/Area2D" to="." method="_on_area_2d_body_entered"]
